메인 이미지 변경

--- a/web/src/main/resources/templates/main.html
+++ b/web/src/main/resources/templates/main.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="container">
-        <img class="img-fluid" src="https://scontent-icn1-1.cdninstagram.com/t51.2885-15/e35/17438824_393146947736694_2521389288742977536_n.jpg?se=7" />
+        <img class="img-fluid" src="http://jmsys14.negagea.kr/firevo/homepage/firevo_homepage2.jpg" />
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
