--- a/web/src/main/resources/templates/main.html
+++ b/web/src/main/resources/templates/main.html
@@ -6,6 +6,16 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous" />
     <title>Firevo Main Page</title>
+    <style type="text/css">
+        footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 50px;
+            line-height: 50px;
+            background-color: #292b2c;
+        }
+    </style>
 </head>
 <body>
     <div class="pos-f-t">
@@ -21,10 +31,18 @@
             </button>
         </nav>
     </div>
-
-    <div class="container">
-        <img class="img-fluid" src="http://jmsys14.negagea.kr/firevo/homepage/firevo_homepage2.jpg" />
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-12">
+                <img class="img-fluid" src="http://jmsys14.negagea.kr/firevo/homepage/firevo_homepage2.jpg"/>
+            </div>
+        </div>
     </div>
+    <footer>
+        <div class="container">
+            <span class="text-muted">Copyright ⓒ Firevo. All rights reserved.</span>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
