--- a/web/src/main/resources/templates/main.html
+++ b/web/src/main/resources/templates/main.html
@@ -36,12 +36,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-			<img class="img-responsive" src="http://jmsys14.negagea.kr/firevo/homepage/firevo_homepage2.jpg" style="width:100%;height: 100%"/>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-12">
-			<p style="text-align: center"><a href="map">오시는 길</a></p>
+			<a href="map"><img class="img-responsive" src="http://jmsys14.negagea.kr/firevo/homepage/firevo_homepage2.jpg" style="width:100%;height: 100%"/></a>
 		</div>
 	</div>
 </div>
