--- a/web/src/main/resources/templates/main.html
+++ b/web/src/main/resources/templates/main.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+		  integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
 		  crossorigin="anonymous"/>
 	<title>Firevo Main Page</title>
 	<style type="text/css">
@@ -19,24 +20,39 @@
 	</style>
 </head>
 <body>
-<div class="pos-f-t">
-	<div class="collapse" id="navbarToggleExternalContent">
-		<div class="bg-inverse p-4">
-			<h4 class="text-white" th:text="${message}"/>
-			<span class="text-muted">Toggleable via the navbar brand.</span>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-sm-12" style="height:125px">
+			<img src="/images/firevo_title_150x34.png"/>
 		</div>
 	</div>
-	<nav class="navbar navbar-inverse bg-inverse">
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false"
-				aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-	</nav>
+	<div class="row">
+		<div class="col-sm-4" style="padding:0">
+			<div style="text-align:center; height:125px; border: solid lightgray 1px;">
+				<img src="/images/firevo_button_default.png" style="padding-top: 43px"/>
+				<p style="padding-top: 10px; color:grey">피레보</p>
+			</div>
+		</div>
+		<div class="col-sm-4" style="padding:0">
+			<div style="text-align:center; height:125px; border: solid lightgray 1px;">
+				<img src="/images/register_button_default.png" style="padding-top: 28px"/>
+				<p style="padding-top: 5px; color:grey">정품등록</p>
+			</div>
+		</div>
+		<div class="col-sm-4" style="padding:0">
+			<div style="text-align:center; height:125px; border: solid lightgray 1px;">
+				<img src="/images/movie_button_default.png" style="padding-top: 43px"/>
+				<p style="padding-top: 10px; color:grey">시연영상</p>
+			</div>
+		</div>
+	</div>
 </div>
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-			<a href="map"><img class="img-responsive" src="http://jmsys14.negagea.kr/firevo/homepage/firevo_homepage2.jpg" style="width:100%;height: 100%"/></a>
+			<a href="map"><img class="img-responsive"
+							   src="http://jmsys14.negagea.kr/firevo/homepage/firevo_homepage2.jpg"
+							   style="width:100%;height: 100%"/></a>
 		</div>
 	</div>
 </div>
@@ -45,9 +61,14 @@
 		<span class="text-muted">Copyright ⓒ Firevo. All rights reserved.</span>
 	</div>
 </footer>
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+		integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
+		crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
+		integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+		crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
+		integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
 		crossorigin="anonymous"></script>
 </body>
 </html>
