--- a/web/src/main/resources/templates/main.html
+++ b/web/src/main/resources/templates/main.html
@@ -1,53 +1,40 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
 		  crossorigin="anonymous"/>
+    <link rel="stylesheet" href="/css/firevo.css" type="text/css"/>
 	<title>Firevo Main Page</title>
-	<style type="text/css">
-		footer {
-			position: absolute;
-			bottom: 0;
-			width: 100%;
-			height: 50px;
-			line-height: 50px;
-			background-color: #292b2c;
-		}
-	</style>
 </head>
 <body>
 <div class="pos-f-t">
-	<div class="collapse" id="navbarToggleExternalContent">
-		<div class="bg-inverse p-4">
-			<h4 class="text-white" th:text="${message}"/>
-			<span class="text-muted">Toggleable via the navbar brand.</span>
-		</div>
-	</div>
-	<nav class="navbar navbar-inverse bg-inverse">
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false"
-				aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-	</nav>
+    <div class="collapse" id="navbarToggleExternalContent">
+        <div class="bg-inverse p-4">
+            <h4 class="text-white" th:text="${message}"/>
+            <span class="text-muted">Toggleable via the navbar brand.</span>
+        </div>
+    </div>
+    <nav class="navbar navbar-inverse bg-inverse">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </nav>
 </div>
 <div class="container-fluid">
-	<div class="row">
-		<div class="col-md-12">
-			<a href="map"><img class="img-responsive" src="http://jmsys14.negagea.kr/firevo/homepage/firevo_homepage2.jpg" style="width:100%;height: 100%"/></a>
-		</div>
-	</div>
+    <div class="row">
+        <div class="col-md-12">
+            <a href="map"><img class="img-responsive" src="http://jmsys14.negagea.kr/firevo/homepage/firevo_homepage2.jpg" style="width:100%;height: 100%"/></a>
+        </div>
+    </div>
 </div>
-<footer>
-	<div class="container">
-		<span class="text-muted">Copyright ⓒ Firevo. All rights reserved.</span>
-	</div>
-</footer>
+<div th:include="footer :: copy"></div>
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
-		crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
 </body>
 </html>
