--- a/web/src/main/resources/templates/main.html
+++ b/web/src/main/resources/templates/main.html
@@ -12,22 +12,20 @@
 </head>
 <body>
 <div class="pos-f-t">
-    <div class="collapse" id="navbarToggleExternalContent">
-        <div class="bg-inverse p-4">
-            <h4 class="text-white" th:text="${message}"/>
-            <span class="text-muted">Toggleable via the navbar brand.</span>
-        </div>
-    </div>
-    <nav class="navbar navbar-inverse bg-inverse">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </nav>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-12" style="height:125px">
-                <img src="/images/firevo_title_150x34.png"/>
+            <div class="col-sm-12">
+                <div class="row">
+                    <div class="col-sm-6" style="height:125px">
+                        <img src="/images/firevo_title_150x34.png" style="margin: 34px"/>
+                    </div>
+                    <div class="col-sm-6" style="height:125px;">
+                        <div class="top_btn_area" style="text-align:right; margin:30px">
+                            <img src="/images/search_icon.png"/>
+                            <img src="/images/more_icon.png"/>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -54,14 +52,14 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <a href="map"><img class="img-responsive" src="http://jmsys14.negagea.kr/firevo/homepage/firevo_homepage2.jpg" style="width:100%;height: 100%"/></a>
+                <a href="map"><img class="img-responsive"
+                                   src="http://jmsys14.negagea.kr/firevo/homepage/firevo_homepage2.jpg"
+                                   style="width:100%;height: 100%"/></a>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12">
-                <a href="map"><img class="img-responsive"
-                                   src="http://jmsys14.negagea.kr/firevo/homepage/firevo_homepage2.jpg"
-                                   style="width:100%;height: 100%"/></a>
+                <a href="map"><img class="img-responsive" src="http://jmsys14.negagea.kr/firevo/homepage/firevo_homepage2.jpg" style="width:100%;height: 100%"/></a>
             </div>
         </div>
     </div>
