모바일 버전 대응

--- a/web/src/main/resources/templates/main.html
+++ b/web/src/main/resources/templates/main.html
@@ -16,12 +16,12 @@
 <div class="pos-f-t">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-12 col-12">
                 <div class="row">
-                    <div class="col-sm-6" style="height:125px">
+                    <div class="col-sm-6 col-6" style="height:125px">
                         <img src="/images/firevo_title_150x34.png" style="margin: 34px"/>
                     </div>
-                    <div class="col-sm-6" style="height:125px;">
+                    <div class="col-sm-6 col-6" style="height:125px;">
                         <div class="top_btn_area" style="text-align:right; margin:30px">
                             <img src="/images/search_icon.png"/>
                             <img src="/images/more_icon.png"/>
@@ -31,19 +31,19 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-4 gnb_tab">
+            <div class="col-sm-4 col-4 gnb_tab">
                 <div class="gnb_tab_box">
                     <span class="gnb_tab_img gnb_tab_firevo">FIREVO</span>
                     <span class="gnb_tab_txt">피레보</span>
                 </div>
             </div>
-            <div class="col-sm-4 gnb_tab">
+            <div class="col-sm-4 col-4 gnb_tab">
                 <div class="gnb_tab_box">
                     <span class="gnb_tab_img gnb_tab_reg">REGISTER</span>
                     <span class="gnb_tab_txt">정품등록</span>
                 </div>
             </div>
-            <div class="col-sm-4 gnb_tab">
+            <div class="col-sm-4 col-4 gnb_tab">
                 <div class="gnb_tab_box">
                     <span class="gnb_tab_img gnb_tab_video">REGISTER</span>
                     <span class="gnb_tab_txt">시연영상</span>
