--- a/web/src/main/resources/templates/footer.html
+++ b/web/src/main/resources/templates/footer.html
@@ -4,10 +4,10 @@
 <div th:fragment="copy">
     <div class="ft">
         <footer>
-            <!--        <p class="u_crt">
-                        <span class="u_cri">개인정보취급방침</span>
-                        <span class="u_cri u_cri_v1">PC버전</span>
-                    </p>-->
+            <p class="u_crt">
+                <span class="u_cri">개인정보취급방침</span>
+                <span class="u_cri u_cri_v1">PC버전</span>
+            </p>
             <div class="ft_info">
                 <div class="ft_box">
                     <dl class="business_info">
