--- a/web/src/main/resources/templates/main.html
+++ b/web/src/main/resources/templates/main.html
@@ -4,77 +4,59 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
-          crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/css/firevo.css" type="text/css"/>
-    <title>Firevo Main Page</title>
+    <title>Firevo</title>
     <style type="text/css">
+        .main_row .row div {
+            padding-left: 0;
+            padding-right: 0;
+            padding-bottom: 10px;
+        }
 
+        .main_row .row:last-child div {
+            padding-bottom: 0px;
+        }
     </style>
 </head>
 <body>
 <div class="pos-f-t">
-    <div class="container-fluid">
+    <div th:include="header :: copy"></div>
+    <div class="container-fluid main_row">
         <div class="row">
-            <div class="col-sm-12 col-12">
-                <div class="row">
-                    <div class="col-sm-6 col-6" style="height:125px">
-                        <img src="/images/firevo_title_150x34.png" style="margin: 34px"/>
-                    </div>
-                    <div class="col-sm-6 col-6" style="height:125px;">
-                        <div class="top_btn_area" style="text-align:right; margin:30px">
-                            <img src="/images/search_icon.png"/>
-                            <img src="/images/more_icon.png"/>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-12">
+                <a href="/map"><img class="img-responsive" src="http://jmsys14.negagea.kr/firevo/resources/firevo_main.jpg" style="width:100%;"/></a>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-4 col-4 gnb_tab">
-                <div class="gnb_tab_box">
-                    <span class="gnb_tab_img gnb_tab_firevo">FIREVO</span>
-                    <span class="gnb_tab_txt">피레보</span>
-                </div>
+            <div class="col-4">
+                <img class="img-responsive img-rounded" src="http://jmsys14.negagea.kr/firevo/resources/p_01.jpg" style="width:100%;"/>
             </div>
-            <div class="col-sm-4 col-4 gnb_tab">
-                <div class="gnb_tab_box">
-                    <span class="gnb_tab_img gnb_tab_reg">REGISTER</span>
-                    <span class="gnb_tab_txt">정품등록</span>
-                </div>
+            <div class="col-4">
+                <img class="img-responsive img-rounded" src="http://jmsys14.negagea.kr/firevo/resources/p_10.jpg" style="width:100%;"/>
             </div>
-            <div class="col-sm-4 col-4 gnb_tab">
-                <div class="gnb_tab_box">
-                    <span class="gnb_tab_img gnb_tab_video">REGISTER</span>
-                    <span class="gnb_tab_txt">시연영상</span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <a href="map"><img class="img-responsive"
-                                   src="http://jmsys14.negagea.kr/firevo/homepage/firevo_homepage2.jpg"
-                                   style="width:100%;height: 100%"/></a>
+            <div class="col-4">
+                <img class="img-responsive img-rounded" src="http://jmsys14.negagea.kr/firevo/resources/p_14.jpg" style="width:100%;"/>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
-                <a href="map"><img class="img-responsive" src="http://jmsys14.negagea.kr/firevo/homepage/firevo_homepage2.jpg" style="width:100%;height: 100%"/></a>
+            <div class="col-12">
+                <img class="img-responsive" src="http://jmsys14.negagea.kr/firevo/resources/product_inquiry.jpg" style="width:100%;"/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <img class="img-responsive" src="http://jmsys14.negagea.kr/firevo/resources/afterservice.jpg" style="width:100%;"/>
+            </div>
+            <div class="col-6">
+                <img class="img-responsive" src="http://jmsys14.negagea.kr/firevo/resources/partnership.jpg" style="width:100%;"/>
             </div>
         </div>
     </div>
     <div th:include="footer :: copy"></div>
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
-            integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
-            integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
-            crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
-            integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
-            crossorigin="anonymous"></script>
 </div>
 </body>
 </html>
