--- a/web/src/main/resources/templates/map.html
+++ b/web/src/main/resources/templates/map.html
@@ -1,90 +1,71 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
-		  crossorigin="anonymous"/>
-	<title>Firevo Main Page</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/css/firevo.css" type="text/css"/>
+    <style type="text/css">
+        .row {
+            padding-top: 15px;
+        }
+    </style>
+    <title>Firevo Map</title>
 </head>
 <body>
 <div class="pos-f-t">
-	<div class="collapse" id="navbarToggleExternalContent">
-		<div class="bg-inverse p-4">
-			<h4 class="text-white" th:text="${message}"/>
-			<span class="text-muted">Toggleable via the navbar brand.</span>
-		</div>
-	</div>
-	<nav class="navbar navbar-inverse bg-inverse">
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false"
-				aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-	</nav>
-</div>
-<div class="container">
-	<div class="row">
-		<div class="col-md-2 col-sm-1 col-xs-1"></div>
-		<div class="col-md-8 col-sm-10 col-xs-10">
-			<h4>오시는 길</h4>
-		</div>
-		<div class="col-md-2 col-sm-1 col-xs-1"></div>
-	</div>
-	<div class="row">
-		<div class="col-md-2 col-sm-1 col-xs-1"></div>
-		<div class="col-md-8 col-sm-10 col-xs-10" style="height:300px">
-			<div id="map" style="width:100%;height:100%;"></div>
-		</div>
-		<div class="col-md-2 col-sm-1 col-xs-1"></div>
-	</div>
-	<div class="row">
-		<div class="col-md-2 col-sm-1 col-xs-1"></div>
-		<div class="col-md-8 col-sm-10 col-xs-10">
-			<dl>
-				<dt>주소</dt>
-				<dd>서울특별시 송파구 송파대로 167<br/>테라타워 B동 6층 603호</dd>
-				<dt>전화</dt>
-				<dd>02-1800-9360</dd>
-				<dt>업무시간</dt>
-				<dd>평일 09:00 ~ 18:00</dd>
-			</dl>
-		</div>
-		<div class="col-md-2 col-sm-1 col-xs-1"></div>
-	</div>
-	<div class="row">
-		<div class="col-md-2 col-sm-1 col-xs-1"></div>
-		<div class="col-md-8 col-sm-10 col-xs-10">
-			<p><a href="/">메인으로</a></p>
-		</div>
-		<div class="col-md-2 col-sm-1 col-xs-1"></div>
-	</div>
+    <div th:include="header :: copy"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h3>오시는 길</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12" style="height:300px">
+                <div id="map" style="width:100%;height:100%;"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <dl>
+                    <dt>주소</dt>
+                    <dd>서울특별시 송파구 송파대로 167<br/>테라타워 B동 6층 603호</dd>
+                    <dt>전화</dt>
+                    <dd>02-1800-9360</dd>
+                    <dt>업무시간</dt>
+                    <dd>평일 09:00 ~ 18:00</dd>
+                </dl>
+            </div>
+        </div>
+    </div>
+    <div th:include="footer :: copy"></div>
 </div>
 <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?clientId=CF1BPOpKJlbG_CSbDtyF"></script>
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
-		crossorigin="anonymous"></script>
 <script type="text/javascript">
-	var position = new naver.maps.LatLng(37.5151145, 126.8954433);
-	var mapOptions = {
-		center: position,
-		zoom: 10,
-		zoomControl: true,
-		zoomControlOptions: {
-			position: naver.maps.Position.TOP_RIGHT
-		},
-		mapTypeControl: true,
-		mapTypeControlOptions: {
-			style: naver.maps.MapTypeControlStyle.BUTTON,
-			position: naver.maps.Position.TOP_RIGHT
-		}
-	}
-	var map = new naver.maps.Map('map', mapOptions);
-	var marker = new naver.maps.Marker({
-		position: position,
-		map: map
-	});
+    var position = new naver.maps.LatLng(37.5151145, 126.8954433);
+    var mapOptions = {
+        center: position,
+        zoom: 10,
+        zoomControl: true,
+        zoomControlOptions: {
+            position: naver.maps.Position.TOP_RIGHT
+        },
+        mapTypeControl: true,
+        mapTypeControlOptions: {
+            style: naver.maps.MapTypeControlStyle.BUTTON,
+            position: naver.maps.Position.TOP_RIGHT
+        }
+    }
+    var map = new naver.maps.Map('map', mapOptions);
+    var marker = new naver.maps.Marker({
+        position: position,
+        map: map
+    });
 </script>
 </body>
 </html>
