--- a/web/src/main/resources/templates/register.html
+++ b/web/src/main/resources/templates/register.html
@@ -16,42 +16,61 @@
     <div th:include="header :: copy"></div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 prd_form">
-                <form>
-                    <div class="form-group">
-                        <label class="title">구매자 이름</label>
-                        <input type="text" class="form-control" name="name"/>
-                    </div>
-                    <div class="form-group">
-                        <label class="title">생년월일</label>
-                        <input type="date" class="form-control" name="birthday"/>
-                    </div>
-                    <div class="form-group">
-                        <label class="title">제품 색상</label>
-                        <select class="form-control" name="colorType">
-                            <option th:each="item : ${T(com.firevo.product.ProductColorType).values()}" th:value="${item.code}" th:label="${item.desc}"/>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label class="title">제품 S/N</label>
-                        <input type="text" class="form-control" name="serialNumber"/>
-                    </div>
-                    <div class="form-group">
-                        <label class="title">제품 구매일</label>
-                        <input type="date" class="form-control" name="purchaseDate"/>
-                    </div>
-                    <div class="form-group">
-                        <label class="title">구매처</label>
-                        <select class="form-control" name="shopType">
-                            <option th:each="item : ${T(com.firevo.product.ProductShopType).values()}" th:value="${item.code}" th:label="${item.desc}"/>
-                        </select>
-                        <input type="hidden" id="elseCode" th:value="${T(com.firevo.product.ProductShopType).ELSE.getCode()}"/>
-                        <input type="text" class="form-control shop_else" name="shopName"/>
-                    </div>
-
-                </form>
-                <button type="button" class="btn btn-success">제품등록</button>
+            <div class="col-sm-3 col-lg-4 col-xl-4"></div>
+            <div class="col-12 col-sm-8 col-lg-7 col-xl-4 prd_form">
+                <div class="prd_form">
+                    <form>
+                        <div class="form-group">
+                            <label class="title">구매자 이름</label>
+                            <input type="text" class="form-control" name="name"/>
+                        </div>
+                        <div class="form-group">
+                            <label class="title" style="display: block;">생년월일</label>
+                            <select class="form-control" style="display: inline-block; width: 140px" name="birthday">
+                                <option th:each="i : ${#numbers.sequence(1900,2018)}" th:value="${i}" th:label="${i}"/>
+                            </select>
+                            <select class="form-control" style="display: inline-block; width: 90px" name="birthday">
+                                <option th:each="i : ${#numbers.sequence(1,12)}" th:value="${i}" th:label="${i}"/>
+                            </select>
+                            <select class="form-control" style="display: inline-block; width: 90px" name="birthday">
+                                <option th:each="i : ${#numbers.sequence(1,31)}" th:value="${i}" th:label="${i}"/>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label class="title">제품 색상</label>
+                            <select class="form-control" name="colorType">
+                                <option th:each="item : ${T(com.firevo.product.ProductColorType).values()}" th:value="${item.code}" th:label="${item.desc}"/>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label class="title">제품 S/N</label>
+                            <input type="text" class="form-control" name="serialNumber"/>
+                        </div>
+                        <div class="form-group">
+                            <label class="title" style="display: block;">제품 구매일</label>
+                            <select class="form-control" style="display: inline-block; width: 140px" name="purchaseDate">
+                                <option th:each="i : ${#numbers.sequence(2018,2018)}" th:value="${i}" th:label="${i}"/>
+                            </select>
+                            <select class="form-control" style="display: inline-block; width: 90px" name="purchaseDate">
+                                <option th:each="i : ${#numbers.sequence(1,12)}" th:value="${i}" th:label="${i}"/>
+                            </select>
+                            <select class="form-control" style="display: inline-block; width: 90px" name="purchaseDate">
+                                <option th:each="i : ${#numbers.sequence(1,31)}" th:value="${i}" th:label="${i}"/>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label class="title">구매처</label>
+                            <select class="form-control" name="shopType">
+                                <option th:each="item : ${T(com.firevo.product.ProductShopType).values()}" th:value="${item.code}" th:label="${item.desc}"/>
+                            </select>
+                            <input type="hidden" id="elseCode" th:value="${T(com.firevo.product.ProductShopType).ELSE.getCode()}"/>
+                            <input type="text" class="form-control shop_else" name="shopName"/>
+                        </div>
+                    </form>
+                    <button type="button" class="btn btn-success">제품등록</button>
+                </div>
             </div>
+            <div class="col-sm-1 col-lg-1 col-xl-4"></div>
         </div>
     </div>
     <div th:include="footer :: copy"></div>
@@ -60,7 +79,7 @@
     var shopElseCode = $("#elseCode").val();
     var shopElseInput = $(".shop_else");
 
-    $("[name=shopType]").change(function() {
+    $("[name=shopType]").change(function () {
         console.log(this);
         if (this.selectedIndex == shopElseCode) {
             shopElseInput.show();
@@ -69,7 +88,7 @@
         }
     });
 
-    $(".btn-success").click(function() {
+    $(".btn-success").click(function () {
         $.ajax({
             url: "/product/registration",
             method: "POST",
